R2.11.14    2020/02/07 K. Kim
    build against event R4.5.1

R2.11.13    2019/09/11 K. Kim
    buid against event R4.4.1

R2.11.12    2018/11/16 K. Kim for Till Straumann
    drvPadUdpComm.c: relax default values for nsamples_dynamic,
    nchannels_dynamic: if no peer answers the initial query
    (e.g., because it is not on-line yet) then assume it is OK
    to accept the values requested by the host-side.

R2.11.11:   2018/11/13  K. Kim for Till Straumann
    fidProcess.c: Suppress error message when evrTimeGetFromPipeline fails
    An evrSupport record already provides that information.
    build against event R4.3.10
   
R2.11.10:   2018/11/02  K. Kim
    build against event R4.3.10

R2.11.9:    2018/10/16  K. Kim
    build against event R4.3.9

R2.11.8:    2018/08/17  K. Kim
    build against event R4.3.8

R2.11.7:    2018/06/28  K. Kim
    build against event R4.3.7

R2.11.6:    2018/05/16  K. Kim
    build against event R4.3.6

R2.11.5:    2018/04/18  T. Straumann
    EVENT    -> R4.3.5
R2.11.4:    2018/04/18  K. Kim
    EVENT    -> R4.3.3

R2.11.3:    2018/03/20  T. Straumann
    EVENT     -> R4.3.1-BR-new_bsa_core
R2.11.2:    2018/03/20  T. Straumann
    TIMINGAPI -> R0.6
    EVENT     -> R4.3.0-BR-new_bsa_core
    DONT use EVRCLIENT
R2.11.0:    2018/03/20  T. Straumann
    drvPadUdpCommHWTime() always uses posix clock_gettime; removed variant
    that relied on EVR-specific code (ErGetTicks).

R2.10.0:    2017/06/06  H. Slepicka
    Bumped Event version to R4.2.9
    Bumped MiscUtils version to R2.2.5

R2.9.0:     2017/02/20  H. Slepicka
    Bumped EVENT version to R4.2.8.
    Changed name of CONFIG_SITE.Common.linuxRT* to remove glibc from it.

udpComm-R2-7-1: 2016/06/23 B. Hill
	Updated to miscUtils-R2-2-3 as the miscUtils-R2-2-2 libmiscUtils.a for linux-x86_64 and linuxRT
		has an undefined symbol S_ISDIR that should have been expanded as a macro.
	Build Linux targets against evrClient-R1-0-p7 and RTEMS targets against event-R4-2-4
